Rearranges the 2 dialog elements so that they work better on lower resolutions by:  - making the buttons always be visible.  - shrinking the images as the dialog gets smaller  - hiding the image completely for resolutions smaller than a certain value. R=bauerb@chromium.org NOTRY=true BUG=268933
Review URL: https://chromiumcodereview.appspot.com/23286002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@219035 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 63944b642b7b71cf8aac7646e2e97a5f20fe30bd

--- a/chrome/browser/resources/options/managed_user_create_confirm.css
+++ b/chrome/browser/resources/options/managed_user_create_confirm.css
@@ -7,24 +7,31 @@
 }
 
 #managed-user-created-title {
-  padding: 0 0 20px 0;
+  padding: 20px;
   word-wrap: break-word;
 }
 
-#managed-user-created-content-area {
-  padding: 20px;
+@media only screen and (max-height:400px) {
+
+/* Omit the image on very small screens. */
+#managed-user-created-image {
+  display: none;
 }
+
+} /* @media only screen and (max-height:400px) */
 
 #managed-user-created-image {
   -webkit-border-radius: 3px 3px 0 0;
+  -webkit-box-flex: 5;
   background-image: -webkit-image-set(
       url('../../../../ui/resources/default_100_percent/supervised_illustration_done.png') 1x,
       url('../../../../ui/resources/default_200_percent/supervised_illustration_done.png') 2x);
+  background-position: center;
   height: 344px;
 }
 
 #managed-user-created-text {
-  padding: 0;
+  padding: 0 20px 0 20px;
   white-space: pre-wrap;
   word-wrap: break-word;
 }
@@ -35,5 +42,5 @@
 }
 
 #managed-user-created-action-area {
-  padding: 20px 0 0 0;
+  padding: 20px;
 }
